# clipsync

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/clipsync-cli/: Cargo.toml
crates/clipsync-cli/src/: main.rs
crates/clipsync-core/: Cargo.toml
crates/clipsync-core/src/: clipboard.rs  crypto.rs  device.rs  discovery.rs  lib.rs  protocol.rs
crates/clipsync-desktop/: Cargo.toml
crates/clipsync-desktop/src/: main.rs
crates/clipsync-server/: Cargo.toml
crates/clipsync-server/src/: main.rs
